# ToM_Router

./: .gitignore  PROGRESS_LOG.md  README.md  RESULTS.md  pyproject.toml  requirements.txt  run_all.sh  tom_router_implementation_plan.md
configs/: data.yaml  eval_routed.yaml  eval_router.yaml  experts.yaml  router_student.yaml  teacher.yaml
data/processed/: DATASET_CARD.md  dialogue_scenarios.json  router_dataset.parquet  router_dataset_hardened.parquet  router_dataset_hardened_v2.parquet
outputs/contrastive/: contrastive_questions.parquet  contrastive_teacher_cache.jsonl
outputs/reports/: answer_quality_eval.json  answer_quality_predictions.parquet  dataset_report.txt  dialogue_agent_results.json  hardened_dataset_report.txt  routed_system_eval.json  routed_system_predictions.parquet  router_error_analysis.txt  router_eval_metrics.json  router_test_predictions.parquet
outputs/teacher_labels/: router_dataset_with_teacher.parquet
scripts/: build_dialogue_scenarios.py  build_hardened_dataset.py  build_router_dataset.py  eval_answer_quality.py  eval_dialogue_agent.py  eval_routed_system.py  eval_router.py  export_router.py  generate_contrastive_questions.py  generate_teacher_labels.py  generate_visualizations.py  label_contrastive_teacher.py  prepare_cicero.py  prepare_kokomind.py  prepare_simpletom.py  prepare_social_iqa.py  prepare_theory_of_mind.py  prepare_tomi_nli.py  run_ablations.py  run_distillation_ablation.py  run_extended_ablations.py  run_hardened_ablation.py  style_normalize.py  train_experts.py  train_student_router.py
src/data/: cleaners.py  (+2 more)
(+23 files in other folders)
